# startaste

./: .beans.yml  .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  hn2json.py  pyproject.toml  release.sh  requirements.txt
.beans/: startaste-1r78--bug-json-export-overwrites-stories-with-comments.md  startaste-32di--add-github-stars.md  startaste-8khv--daemon-mode-sync-every-configured-amount-of-time.md  startaste-br8t--add-logo-and-ci.md  startaste-ef1p--cli-restructure-sync-and-export-subcommands.md  startaste-he8y--local-dashboard-in-browser.md  startaste-iapd--test-framework-with-hn-website-mockups.md  startaste-mzsl--make-python-libs-up-to-date.md  startaste-pg9g--configure-locations-of-variable-data.md  startaste-wwn3--release-management.md  startaste-xubm--just-before-release-run-tests-and-coverage.md  startaste-yy9l--docker-file.md  startaste-zoeg--remove-legacy-code-and-docs.md  startaste-zrap--nix-module-for-a-service.md  startaste-zvcw--rewrite-to-go-or-other-lang.md
startaste/: __init__.py  __main__.py  cli.py  db.py  export.py  paths.py  sync.py
startaste/dashboard/: __init__.py  services.py  views.py
startaste/sources/: __init__.py  base.py
tests/: conftest.py  test_dashboard.py  test_export.py  test_github_sync.py  test_migration.py  test_paths.py  test_scraper.py  test_services.py  test_sources.py  test_sync.py
tests/fixtures/: github_starred_page1.json  hn_comments_page1.html  hn_item_11111.json  hn_item_44444.json  hn_login_failure.html  hn_login_success.html  hn_stories_empty.html  hn_stories_page1.html  (+1 more)
(+60 files in other folders)
