[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "startaste"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "peewee",
    "python-dotenv",
]

[project.scripts]
startaste = "startaste.cli:main"

[tool.setuptools]
packages = ["startaste"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
