[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "startaste"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "peewee",
    "python-dotenv",
    "flask",
]

[project.scripts]
startaste = "startaste.cli:main"

[tool.setuptools]
packages = ["startaste", "startaste.dashboard", "startaste.sources", "startaste.sources.hn", "startaste.sources.github"]

[tool.setuptools.package-data]
"startaste.dashboard" = ["templates/*.html", "static/*.css"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
